tests/ui/impl-trait/precise-capturing/self-capture.stderr
error: `use<...>` precise capturing syntax is currently not allowed in return-position `impl Trait` in traits
  --> $DIR/self-capture.rs:4:34
   |
LL |     fn bar<'a>() -> impl Sized + use<Self>;
   |                                  ^^^^^^^^^
   |
   = note: currently, return-position `impl Trait` in traits and trait implementations capture all lifetimes in scope

error: aborting due to 1 previous error

